# webinar-cicd

./: .gitignore  CMakeLists.txt  allocator.cpp  ip_filter.cpp  main.cpp  sfinae.cpp  sfinae.h  test_version.cpp
.github/workflows/: release.yml  static.yml
inc/core/: editormodel.h
